# evm-wallet

./: .gitignore  Cargo.toml  README.md  build.sh  klave.json
apps/evm-wallet/: Cargo.toml
apps/evm-wallet/src/: bindings.rs
apps/evm-wallet/wit/: world.wit
apps/rust-wallet/: Cargo.toml
apps/rust-wallet/src/: bindings.rs  lib.rs  wallet.rs
apps/rust-wallet/wit/: world.wit
crates/klave-networks/: Cargo.toml
crates/klave-networks/src/: network.rs  networks.rs
