[package]
name = "klave-networks"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0.91"
log = { version = "0.4.17", default-features = false }
displaydoc = { version = "0.2", default-features = false }

http = "1.2.0"
klave = "0.3.0"
url = "2.5.4"
#mockall = "0.13.1"

[features]
default = ["klave"]
klave = []
test = []
